feat : seperate env item into config file

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 DB_TYPE=
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASS=your_password
-DB_NAME=be_dot_indonesia
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASS=
+DB_NAME=
+
+NODE_ENV=
+
+JWT_SECRET=
